# lucide-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  ICONS.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  task.yml
.github/workflows/: run-ci.yml  run-release.yml  run-security.yml  step-dependency-outdated.yml  step-github-release.yml  step-publish-crates.yml  step-quality-checks.yml  step-security-audit.yml  step-version-management.yml
apps/examples/dioxus/: Cargo.toml  Dioxus.toml
apps/examples/dioxus/src/: main.rs
apps/examples/dioxus/src/components/: mod.rs
apps/examples/leptos/: Cargo.toml  README.md  index.html
apps/examples/leptos/src/: main.rs  pages.rs
apps/examples/sycamore/: Cargo.toml  index.html
apps/examples/sycamore/src/: main.rs
apps/examples/yew/: Cargo.toml  LICENSE-MIT  index.html
apps/examples/yew/src/: app.rs
apps/examples/yew/src/components/: dashboard_stats.rs  feature_grid.rs  icon_showcase.rs  mod.rs  navigation.rs
apps/www/: Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
apps/www/public/: output.css  style.css
apps/www/src/: lib.rs  main.rs
apps/www/src/components/: code_block.rs  footer.rs  icon_grid.rs  layout.rs  mod.rs  navbar.rs  search.rs
apps/www/src/data/: icons.rs  mod.rs
apps/www/src/pages/: docs.rs  get_started.rs  home.rs  icons.rs  mod.rs
scripts/: generate-icons.sh
