[workspace]
members = [
    "packages/lucide",
    "apps/www"
]

resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Lucide icon components for Rust UI frameworks (Dioxus, Leptos, Yew, Sycamore)"
authors = ["Codegress <hello@codegress.com>"]
repository = "https://github.com/codegress-com/lucide-rs"
documentation = "https://github.com/codegress-com/lucide-rs#readme"
homepage = "https://github.com/codegress-com/lucide-rs"
keywords = ["rust", "lucide", "icons", "ui", "wasm"]
categories = ["gui", "web-programming", "wasm"]
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "allow"

[profile]

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.wasm-release]
inherits = "release"

[profile.android-dev]
inherits = "dev"
