[package]
name = "lucide-docs"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Documentation website for Lucide Rust icon library"

[dependencies]
# Leptos framework
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }

# Web APIs
web-sys = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = { version = "0.6", features = ["http"] }
gloo-utils = "0.2"
wasm-bindgen-futures = "0.4"

# Our icon library (local development version) - renamed to lucide for better UX
lucide = { package = "lucide-rust", path = "../../packages/lucide", features = ["leptos", "all-icons"] }

# Logging
console_error_panic_hook = "0.1"
tracing = "0.1"
tracing-wasm = "0.2"

[features]
default = []
hydrate = ["leptos/hydrate"]
