[package]
name = "lucide-leptos-csr-example"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
leptos = { version = "0.8.2", features = ["csr"] }
leptos_router = { version = "0.8.2" }
lucide = { path = "../../../packages/lucide", features = ["leptos", "all-icons"] }

[lints]
workspace = true
