[package]
name = "lucide-sycamore-example"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sycamore = "0.9.1"
lucide = { path = "../../../packages/lucide", features = ["sycamore", "essentials"] }

[lints]
workspace = true
